[gd_scene load_steps=22 format=2]

[ext_resource path="res://UI_Elements/splashArtBox.png" type="Texture" id=1]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonHover.tres" type="StyleBox" id=2]
[ext_resource path="res://THEME.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/EthnicityPage/ChooseEthnicityStep.gd" type="Script" id=4]
[ext_resource path="res://Scenes/EthnicityPage/Traits.tres" type="ButtonGroup" id=5]
[ext_resource path="res://Fonts/Gruppo-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonNormal.tres" type="StyleBox" id=7]
[ext_resource path="res://UI_Elements/originDescriptionBox.png" type="Texture" id=8]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonHover.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonDisabled.tres" type="StyleBox" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]
[ext_resource path="res://Resources/Buttons/NextButton/NextButtonPressed.tres" type="StyleBox" id=13]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonNormal.tres" type="StyleBox" id=14]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonDisabled.tres" type="StyleBox" id=15]
[ext_resource path="res://Resources/Buttons/BackButton/BackButtonPressed.tres" type="StyleBox" id=16]

[sub_resource type="DynamicFont" id=6]
size = 36
outline_size = 2
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 54
outline_size = 5
outline_color = Color( 0, 0.262745, 0.00784314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="EthnicityStep" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -40.0
margin_bottom = -90.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 4 )
trait_group = ExtResource( 5 )

[node name="FluffBonusAttribute" type="TextureRect" parent="."]
anchor_left = 0.0425532
anchor_top = 0.121212
anchor_right = 0.297872
anchor_bottom = 0.989899
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="FluffBonusAttribute"]
anchor_left = 0.11
anchor_top = 0.107
anchor_right = 0.831
anchor_bottom = 0.896
margin_left = -0.0100021
margin_top = 0.0869904
margin_right = -0.0210266
margin_bottom = 0.335999

[node name="EthnicityPic" type="TextureRect" parent="FluffBonusAttribute/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
self_modulate = Color( 1, 1, 1, 0.380392 )
margin_right = 346.0
margin_bottom = 481.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1

[node name="HSeparator" type="HSeparator" parent="FluffBonusAttribute/VBoxContainer"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
margin_top = 485.0
margin_right = 346.0
margin_bottom = 509.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="HBoxContainer" type="HBoxContainer" parent="FluffBonusAttribute/VBoxContainer"]
margin_top = 513.0
margin_right = 346.0
margin_bottom = 553.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer"]
margin_right = 346.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.01

[node name="HBoxContainer" type="HBoxContainer" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 346.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="AttributeBonus" type="RichTextLabel" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
margin_left = 11.0
margin_right = 171.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
fit_content_height = true

[node name="AttributeSelect" type="OptionButton" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
margin_left = 175.0
margin_right = 334.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 10 )

[node name="Control" type="Control" parent="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 338.0
margin_right = 346.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Control" type="Control" parent="FluffBonusAttribute/VBoxContainer"]
margin_top = 557.0
margin_right = 346.0
margin_bottom = 678.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="DescriptionContainer" type="TextureRect" parent="."]
anchor_left = 0.320213
anchor_top = 0.046371
anchor_right = 1.0
anchor_bottom = 0.653226
margin_left = -2.0
margin_top = -0.907257
margin_bottom = -1.69354
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EthnicityName" type="Label" parent="DescriptionContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0860717
anchor_top = 0.0796922
anchor_right = 0.884194
anchor_bottom = 0.222549
margin_left = -0.171745
margin_top = 2.18469
margin_right = -1.76843
margin_bottom = 1.4704
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 9 )
text = "NOT SET"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="DescriptionContainer"]
anchor_left = 0.0899843
anchor_top = 0.237542
anchor_right = 0.899844
anchor_bottom = 0.852159
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EthnicityDescription" type="RichTextLabel" parent="DescriptionContainer/ScrollContainer"]
unique_name_in_owner = true
modulate = Color( 0, 0.937255, 0.0823529, 1 )
margin_right = 1036.62
margin_bottom = 368.771
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "NOT SET"
text = "NOT SET"

[node name="HSeparator" type="HSeparator" parent="DescriptionContainer"]
modulate = Color( 0, 0.937255, 0.0823529, 1 )
anchor_left = 0.0962439
anchor_top = 0.191414
anchor_right = 0.899061
anchor_bottom = 0.242696
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PreviousEthnicity" type="Button" parent="."]
anchor_left = 0.307447
anchor_top = 0.264113
anchor_right = 0.360639
anchor_bottom = 0.364919
margin_left = 2.00006
margin_top = 8.52823
margin_right = 1.99908
margin_bottom = 8.72983
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NextEthnicity" type="Button" parent="."]
anchor_left = 0.956914
anchor_top = 0.275202
anchor_right = 1.01011
anchor_bottom = 0.376008
margin_left = 1.00085
margin_top = -2.44965
margin_right = 0.999878
margin_bottom = -2.24759
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 13 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TraitContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchor_left = 0.320213
anchor_top = 0.66129
anchor_right = 1.0
anchor_bottom = 0.985887
margin_left = -2.0
margin_top = 0.322571
margin_bottom = -1.02826
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="item_selected" from="FluffBonusAttribute/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/AttributeSelect" to="." method="_on_AttributeSelect_item_selected"]
[connection signal="button_up" from="PreviousEthnicity" to="." method="_on_PreviousEthnicity_button_up"]
[connection signal="button_up" from="NextEthnicity" to="." method="_on_NextEthnicity_button_up"]
